# pyorcestra

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: package.yml  ruff.yml
orcestra/: __init__.py  flight_performance.py  flightplan.py  io.py  ipfs.py  meteor.py  sat.py  tools.py  utils.py  weathermaps.py
orcestra/postprocess/: config.json  level0.py  level1.py  level2.py
tests/: test_dates.py  test_flightplan.py  test_ipfs.py  test_rounding.py
