[tool.poetry]
name = "orcestra"
version = "0"
description = "Tools around the ORCESTRA field campaign"
authors = ["Tobias Kölling <tobias.koelling@mpimet.mpg.de>"]
readme = "README.md"
license = "MIT"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
include = ["orcestra/data/worldfirs.json"]

[tool.poetry.dependencies]
python = ">=3.10"
aiohttp = "*"
astropy = "*"
cartopy = "*"
cmocean = "*"
easygems = ">=0.0.8"
flox = "*"  # part of xarray[accel]
geopandas = "*"
gpxpy = "*"
healpix = "*"
intake = "<2.0.0"
intake-xarray = "*"
ipywidgets = "*"
matplotlib = "*"
numpy = "*"
pandas = "*" 
pyproj = "*"
requests = "*"
scipy = "*"
seaborn = "*"
sgp4 = "*"
simplekml = "*"
textalloc = "*"
topojson = "*"
xarray = "*"
zarr = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-watch = "*"

[tool.poetry.scripts]
cmap2windy = "orcestra.tools:cmap2windy"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[tool.poetry-dynamic-versioning.files."orcestra/_version.py"]
persistent-substitution = true
initial-content = """
  TYPE_CHECKING = False
  if TYPE_CHECKING:
      from typing import Tuple, Union
      VERSION_TUPLE = Tuple[Union[int, str], ...]
  else:
      VERSION_TUPLE = object

  version: str
  __version__: str
  __version_tuple__: VERSION_TUPLE
  version_tuple: VERSION_TUPLE

  __version__ = '0.0.0'
  __version_tuple__ = (0, 0, 0)
  """

[tool.poetry.plugins."xarray.backends"]
ftml = "orcestra.flightplan:FlightTrackEntrypoint"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
